--- a/content/gobuster.html
+++ b/content/gobuster.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -131,7 +131,7 @@
 								<p>2. Navigate to the directory where the file you just downloaded is stored, and run the following command:</p>
 								<code>
 # Don't forget to change the filename in this command to the version you downloaded.
-rm -rf /usr/local/go && tar -C /usr/local -xzf go1.16.7.linux-amd64.tar.gz
+rm -rf /usr/local/go &amp;&amp; tar -C /usr/local -xzf go1.16.7.linux-amd64.tar.gz
 								</code>
 								<br />
 								<p>3. Add /usr/local/bin/go to your PATH environment variable.</p>
@@ -144,7 +144,7 @@ export PATH=$PATH:/usr/local/go/bin
 go version
 								</code>
 								<br />
-								<p>5. Finally it's time to install Gobuster. Make sure your Go version is >1.16.0, else this step will not work. The easiest way to install Gobuster now is to run the following command, this will install the latest version of Gobuster:</p>
+								<p>5. Finally it's time to install Gobuster. Make sure your Go version is &gt;1.16.0, else this step will not work. The easiest way to install Gobuster now is to run the following command, this will install the latest version of Gobuster:</p>
 								<code>
 go install github.com/OJ/gobuster/v3@latest
 								</code>
@@ -246,7 +246,7 @@ gobuster vhost -u https://example.com -w common-vhosts.txt
 								<p><strong>--timeout [duration]</strong> : HTTP Timeout (default 10s).</p>
 							</ol>
 							<center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-							<h5>50URC35:<h5>
+							<h5>50URC35:</h5>
 							<ul id="sources">
 								<li><a href="https://github.com/OJ/gobuster">Gobuster GitHub</a></li>
 								<li><a href="https://golang.org/">Go Language Homepage</a></li>
