--- a/content/nikto.html
+++ b/content/nikto.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -179,7 +179,7 @@ nikto -update
 								<p><strong>-useproxy</strong> : Specifies the use of a given HTTP proxy via which to conduct scans. Nikto does not currently support SOCKS proxies.</p>
 							</ol>
 							<center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-							<h5>50URC35:<h5>
+							<h5>50URC35:</h5>
 							<ul id="sources">
 								<li><a href="https://en.wikipedia.org/wiki/Nikto_Web_Scanner">Nikto Wiki</a></li>
 								<li><a href="https://github.com/sullo/nikto">Nikto GitHub</a></li>
