--- a/content/ssh.html
+++ b/content/ssh.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -150,13 +150,13 @@ ssh -L &lt;LPORT&gt;:&lt;RHOST&gt;:&lt;RPORT&gt; user@&lt;RHOST&gt;
 										<li>Remote Port Forwarding</li>
 
 										<li>Dynamic Port Forwarding</li>
-									</ul>
+									</ol>
 								</li>
 							</ol>
 							<!-- START CONTENT HERE -->
 
 							<center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-							<h5>50URC35:<h5>
+							<h5>50URC35:</h5>
 							<ul id="sources">
 								<li><a href="https://en.wikipedia.org/wiki/Secure_Shell">SSH Wiki</a></li>
 								<li><a href="http://pentestmonkey.net/cheat-sheet/ssh-cheat-sheet">Pentestmonkey SSH Cheat Sheet</a></li>
