--- a/content/theharvester.html
+++ b/content/theharvester.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -141,7 +141,7 @@ theharvester -d google.com -l 500 -b all -f results.html
                             <br />
                             <p><strong>-d</strong> : Specifies the domain to scan</p>
                             <p><strong>-l</strong> : Specifies how deep the scan should go. More is better but slower! :)</p>
-                            <p><strong>-b</strong> : Specifies the search engine to search on. (options as of may 2018: google, googleCSE, bing, bingapi, pgp, linkedin, google-profiles, jigsaw, twitter, googleplus, all)
+                            <p><strong>-b</strong> : Specifies the search engine to search on. (options as of may 2018: google, googleCSE, bing, bingapi, pgp, linkedin, google-profiles, jigsaw, twitter, googleplus, all)</p>
                             <p><strong>-f</strong> : Specifies an output file for the found results. This file will be saved in the current directory from your terminal, unless specified otherwise, in the HTML format.</p>
                             
                             <li><h5>Passive gathering sources:</h5></li>
@@ -174,7 +174,7 @@ theharvester -d google.com -l 500 -b all -f results.html
                             <p>- Shodan: You need to provide your API key in discovery/shodansearch.py</p>
                         </ol>
                         <center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-                        <h5>50URC35:<h5>
+                        <h5>50URC35:</h5>
                         <ul id="sources">
                             <li><a href="https://github.com/laramies/theHarvester">TheHarvester GitHub</a></li>
                             <li><a href="https://www.hacking-tutorial.com/tips-and-trick/information-gathering-using-theharvester-in-kali-linux/#sthash.IIH1cA08.dpbs">Information gathering using TheHarvester</a></li>
