--- a/content/fcrackzip-bruteforce-tutorial.html
+++ b/content/fcrackzip-bruteforce-tutorial.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -143,7 +143,7 @@ fcrackzip -u -D -p ~/rockyou.txt ~/file.zip
 							<!-- START CONTENT HERE -->
 
 							<center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-							<h5>50URC35:<h5>
+							<h5>50URC35:</h5>
 							<ul id="sources">
 								<li><a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpage</a></li>
 								<li><a href="http://oldhome.schmorp.de/marc/fcrackzip.html">FCrackZip Main Page</a></li>
