--- a/content/heartbleed.html
+++ b/content/heartbleed.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -211,7 +211,7 @@ python heartbleed.py -h
                         </ol>
                         <br />
                         <center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-                        <h5>50URC35:<h5>
+                        <h5>50URC35:</h5>
                         <ul id="sources">
                             <li><a href="https://en.wikipedia.org/wiki/Heartbleed">Heartbleed Wikipedia</a></li>
                             <li><a href="https://www.csoonline.com/article/3223203/vulnerabilities/what-is-the-heartbleed-bug-how-does-it-work-and-how-was-it-fixed.html">What is the Heartbleed bug, how does it work and how was it fixed?</a></li>
