--- a/content/netcat.html
+++ b/content/netcat.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -174,7 +174,7 @@ nc -z -v localhost 1-100
 ...
 nc: connect to localhost port 51 (tcp) failed: Connection refused
 nc: connect to localhost port 52 (tcp) failed: Connection refused
-<span style=color:yellow;>Connection to localhost 53 port [tcp/domain] succeeded!</span>
+<span style="color:yellow;">Connection to localhost 53 port [tcp/domain] succeeded!</span>
 nc: connect to localhost port 54 (tcp) failed: Connection refused
 nc: connect to localhost port 55 (tcp) failed: Connection refused
 nc: connect to localhost port 56 (tcp) failed: Connection refused
@@ -182,16 +182,16 @@ nc: connect to localhost port 56 (tcp) failed: Connection refused
 nc: connect to localhost port 77 (tcp) failed: Connection refused
 nc: connect to localhost port 78 (tcp) failed: Connection refused
 nc: connect to localhost port 79 (tcp) failed: Connection refused
-<span style=color:yellow;>Connection to localhost 80 port [tcp/http] succeeded!</span>
+<span style="color:yellow;">Connection to localhost 80 port [tcp/http] succeeded!</span>
 nc: connect to localhost port 81 (tcp) failed: Connection refused
 nc: connect to localhost port 82 (tcp) failed: Connection refused
 nc: connect to localhost port 83 (tcp) failed: Connection refused
 ...
 					        </code> <br />
 						    <p>To only display successful connections, use the following command:</p>
-						    <p><i><strong>Note:</strong> Only " ... | grep succeeded" will not work. 2>&1 causes stderr of a program to be written to the same file descriptor as stdout. nc writes to stderr by default, pipe will only get stdout hence grep will miss the data.</i></p>
+						    <p><i><strong>Note:</strong> Only " ... | grep succeeded" will not work. 2>&amp;1 causes stderr of a program to be written to the same file descriptor as stdout. nc writes to stderr by default, pipe will only get stdout hence grep will miss the data.</i></p>
 						    <code>
-nc -z -v localhost 1-100 2>&1 | grep succeeded
+nc -z -v localhost 1-100 2>&amp;1 | grep succeeded
 					        </code> <br />
 						    <p>This outputs only the following:</p>
 						    <code>
@@ -211,7 +211,7 @@ Connection to localhost 80 port [tcp/http] succeeded!
 					      </center>
 						  <h5>
 						  50URC35:
-						  <h5>
+						  </h5>
 						  <ul id="sources">
 						    <li><a href="http://nc110.sourceforge.net">Netcat Website</a></li>
 						    <li><a href="https://en.wikipedia.org/wiki/Netcat">Netcat Wiki</a></li>
