Added MITRE ATT&CK Active Scanning guide

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="collapse navbar-collapse" id="navbar" style="min-width: 110px;border:none;margin-left:2%">
-								<p>General<p>
+								<p>General</p>
 								<ul class="nav navbar-nav">
 									<li><a href="index.html">HOME</a></li>
 									<li><a href="readme.html">README.TXT</a></li>
@@ -76,8 +76,30 @@
 						<ul id="contentlist">
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/mitre/MITRE_logo.png" alt="MITRE ATT&CK" height="100" width="100">
+									</div>
+									<div class="col-sm-10">
+										<a href="content/mitre-reconnaissance-preattck.html">MITRE ATT&amp;CK - Reconnaissance - Active Scanning Guide and examples</a>
+										<p><i>september 10th 2024</i></p>
+										<p>A comprehensive guide based on the techniques from the MITRE ATT&amp; framework. It shows multiple examples on how the techniques can be used in the real world coupled with an understandable technical explanation.</p>
+										<span>Tags:</span>
+										<a class="tag">MITRE</a>
+										<a class="tag">ATT&amp;CK</a>
+										<a class="tag">subdomain</a>
+										<a class="tag">recon</a>
+										<a class="tag">web</a>
+										<a class="tag">enumeration</a>
+										<a class="tag">tools</a>
+										<a class="tag">guide</a>
+									</div>
+								</div>
+								<hr class="solid">
+							</li>
+							<li>
+								<div class="row top-buffer">
+									<div class="col-sm-2 content-img">
+										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/gobuster.html">Gobuster - Guide and examples</a>
@@ -100,7 +122,7 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
+									<div class="col-sm-2 content-img">
 										<img src="images/privesc.png" alt="Privilege Escalation" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
@@ -123,8 +145,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/craft_table.png" alt="Craft" height="90" width="90">
+									<div class="col-sm-2 content-img">
+										<img src="images/craft_table.png" alt="Craft" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/craft.html">HackTheBox.eu - Craft</a>
@@ -142,8 +164,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/ssh.png" alt="SSH" height="75" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/ssh.png" alt="SSH" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/ssh.html">SSH - Local, Remote and Dynamic port forwarding</a>
@@ -161,8 +183,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/zip.png" alt="FCrackZip" height="75" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/zip.png" alt="FCrackZip" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/fcrackzip-bruteforce-tutorial.html">FCrackZip - ZIP Bruteforce Tutorial</a>
@@ -180,8 +202,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/jerry_table.png" alt="Jerry" height="90" width="90">
+									<div class="col-sm-2 content-img">
+										<img src="images/jerry_table.png" alt="Jerry" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/jerry.html">HackTheBox.eu - Jerry</a>
@@ -199,8 +221,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/netcat.html">Netcat</a>
@@ -218,8 +240,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/nikto.html">Nikto - Web Scanner Tutorial</a>
@@ -239,8 +261,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/theharvester.html">TheHarvester - Information Gathering Tutorial</a>
@@ -258,8 +280,8 @@
 							</li>
 							<li>
 								<div class="row top-buffer">
-									<div class="col-sm-2" id="content-img">
-										<img src="images/heartbleed.png" alt="Heartbleed" height="90" width="75">
+									<div class="col-sm-2 content-img">
+										<img src="images/heartbleed.png" alt="Heartbleed" height="100" width="85">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/heartbleed.html">Heartbleed vulnerability</a>
