Updated guide tags

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 										<a class="tag">ATT&amp;CK</a>
 										<a class="tag">subdomain</a>
 										<a class="tag">recon</a>
-										<a class="tag">web</a>
+										<a class="tag">active</a>
+										<a class="tag">scanning</a>
 										<a class="tag">enumeration</a>
-										<a class="tag">tools</a>
 										<a class="tag">guide</a>
 									</div>
 								</div>
