--- a/content/mitre-attack-contents.html
+++ b/content/mitre-attack-contents.html
@@ -90,12 +90,8 @@
 								<h3>Table of contents</h3>
 								<h4>Enterprise</h4>
 								<h4>Reconnaissance</h4>
-								<p>The reconnaissance phase is undoubtedly the most important thing you can do during any pentest engagement or CTF. Without proper in-depth recon you never know which exploits to write or attack your target with. It's not only important at the start when mapping out a target, but also when you've already established a foothold in the target machine via a low privilege shell or even when you've got a system/root shell. With a low privilege shell it's important to map out the rest of the system so you can find possible privilege escalation vectors. If you've got a system/root shell you could look for ways to create persistence, or to propagate to other systems which are accessible on the local network. There are many things you can do, but reconnaissance is always at the base of everything.</p>
-								<p><a href="mitre-reconnaissance-preattck.html">1. Active Scanning</a></p>
-								<p><a href="mitre-reconnaissance-preattck.html">2. Gather Victim Host Information</a></p>
-								<p><a href="mitre-reconnaissance-preattck.html">3. Gather Victim Identity Information</a></p>
-								<p><a href="mitre-reconnaissance-preattck.html">4. Gather Victim Network Information</a></p>
-								<p><a href="mitre-reconnaissance-preattck.html">5. Gather Victim Org Information</a></p>
+								<p><a href="mitre-attack-active-scanning.html">1. Active Scanning</a></p>
+								<p>- More technique guides on the way! -</p>
 							</center>
 							</div>
 						  <!-- END OF ARTICLE CONTENT -->
