--- a/content/mitre-attack-active-scanning.html
+++ b/content/mitre-attack-active-scanning.html
@@ -80,6 +80,7 @@
 						<div class="row top-buffer">
 						  <!-- ARTICLE CONTENT -->
 						  <p>Last updated: 10 september 2024</p>
+							<!-- TABLE OF CONTENTS -->
 							<br />
 							<p><a href="#scanning_ip_blocks">&gt; 1.1 Scanning IP Blocks</a></p>
 							<p>&emsp;&emsp;<a href="#finding_ip_blocks">&gt; 1.1.1 Finding IP Blocks</a></p>
@@ -92,6 +93,7 @@
 							<p>&emsp;&emsp;<a href="#dirsearch_directory_bruteforce">&gt; 1.3.2 DirSearch directory bruteforce</a></p>
 							<p>&emsp;&emsp;<a href="#ffuf_subdomain_bruteforce">&gt; 1.3.3 ffuf subdomain bruteforce</a></p>
 							<br />
+							<!-- END TABLE OF CONTENTS -->
 						  	<ol>
 								<li>
 						      		<h5>Active Scanning</h5>
@@ -159,7 +161,7 @@ Host is up (0.17s latency).
 							  <p>With the information we've found so far it's possible to do more in-depth enumeration for each endpoint. With more in-depth scanning it's possible to discover more information such as which hardware and software is running on the endpoints with the corresponding version numbers, which are important to identify possible exploits.</p>
 								<h6 id="nmap_service_scan">1.2.1 Nmap service and version scan</h6>
 								<br />
-							  <p>Aggressive scanning of online endpoints without permission is not ideal, so we're not going to use Porsche for this example. Instead, here is a very good example of how an Nmap service and version scan can discover a critical vulnerability in a Windows 7 system. The following Nmap scan has discovered that our target system is running Windows 7 Service Pack 1, which we did not know before the scan.</p><br>
+							  <p>Aggressive scanning of online endpoints without permission is not ideal, so we're not going to use Porsche for this example. Instead, here is a very good example of how an Nmap service and version scan can discover a critical vulnerability in a Windows 7 system. The following Nmap scan has discovered that our target system is running Windows 7 Service Pack 1, which we did not know prior to the scan.</p><br>
 								<code>
 └──╼ $nmap -sC -sV 192.168.0.44
 Starting Nmap 7.92 ( https://nmap.org ) at 2024-09-07 02:34 CET
