--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<div class="col-sm-10">
 										<a href="content/mitre-attack-active-scanning.html">MITRE ATT&amp;CK - Reconnaissance - Active Scanning Guide and examples</a>
 										<p><i>september 10th 2024</i></p>
-										<p>A comprehensive guide based on the techniques from the MITRE ATT&amp; framework. It shows multiple examples on how the techniques can be used in the real world coupled with an understandable technical explanation.</p>
+										<p>A comprehensive guide based on the techniques from the MITRE ATT&amp;CK framework. It shows multiple examples on how the techniques can be used in the real world coupled with an understandable technical explanation.</p>
 										<span>Tags:</span>
 										<a class="tag">MITRE</a>
 										<a class="tag">ATT&amp;CK</a>
