--- a/content/gobuster.html
+++ b/content/gobuster.html
@@ -12,7 +12,7 @@
 		</script>
 		<link rel="shortcut icon" href="../favicon/favicon.ico"/>
 		<!-- InstanceBeginEditable name="title" -->
-		<title>Gobuster Guide and examples</title>
+		<title>Gobuster Guide and Examples</title>
 		<!-- InstanceEndEditable -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,7 +67,7 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  <h1>Gobuster Guide and examples</h1>
+					  <h1>Gobuster Guide and Examples</h1>
 					<!-- InstanceEndEditable -->
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
@@ -245,6 +245,7 @@ gobuster vhost -u https://example.com -w common-vhosts.txt
 								<p><strong>-a</strong> : (--useragent [string]) Set the User-Agent string (default "gobuster/3.0.1").</p>
 								<p><strong>--timeout [duration]</strong> : HTTP Timeout (default 10s).</p>
 							</ol>
+							<hr class="solid">
 							<center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
 							<h5>50URC35:</h5>
 							<ul id="sources">
