--- a/content/netcat.html
+++ b/content/netcat.html
@@ -12,7 +12,7 @@
 		</script>
 		<link rel="shortcut icon" href="../favicon/favicon.ico"/>
 		<!-- InstanceBeginEditable name="title" -->
-		<title>Netcat Tutorial</title>
+		<title>Netcat Guide and Examples</title>
 		<!-- InstanceEndEditable -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
 
 		<meta charset="UTF-8">
 		<!-- InstanceBeginEditable name="description" -->
-		<meta name="description" content="In-depth explanation and examples of Netcat.">
+		<meta name="description" content="A comprehensive guide and examples on how to use Netcat to conduct information gathering.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
 		<meta name="keywords" content="netcat, gathering, information gathering, web, scanning, security,hacking,hack,heartbleed,krack,crack,stack,memory,stacksec,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,mac,vulnerable,exploitable,vuln,meta,sploit,payload,scanning,nmap,black,white,grey,hat,information,info,book,write,WPA2,wifi,protocol,fix,how to">
@@ -67,7 +67,8 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  <h1>Netcat</h1>
+					  	<h1>Netcat</h1>
+						<center><p><i>Guide and Examples</i></p></center>
 					<!-- InstanceEndEditable -->
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
@@ -117,7 +118,7 @@
 						<!-- InstanceBeginEditable name="article" -->
 						<div class="row top-buffer">
 						  <!-- ARTICLE CONTENT -->
-						  <p>Last updated: 16 april 2019</p>
+						  <p>Last updated: 10 september 2024</p>
 						  <ol>
 						    <li>
 						      <h5>Description</h5>
@@ -204,6 +205,7 @@ Connection to localhost 80 port [tcp/http] succeeded!
 						    <p><strong>-w</strong> : Specifies a timeout period.</p>
 						    <p><strong>-z</strong> : Specifies that nc should scan for listening daemons, without sending any data to them. (Can not be used with: -l)</p>
 					      </ol>
+							<hr class="solid">
 						  <center>
 						    <b>
 						      <p>** For more information, check out the extra links and sources. **</p>
