--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									</div>
 									<div class="col-sm-10">
 										<a href="content/mitre-attack-active-scanning.html">MITRE ATT&amp;CK - Reconnaissance - Active Scanning Guide and examples</a>
-										<p><i>september 10th 2024</i></p>
+										<p><i>Last Updated: september 10th 2024</i></p>
 										<p>A comprehensive guide based on the techniques from the MITRE ATT&amp;CK framework. It shows multiple examples on how the techniques can be used in the real world coupled with an understandable technical explanation.</p>
 										<span>Tags:</span>
 										<a class="tag">MITRE</a>
@@ -99,11 +99,11 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2 content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
+										<img src="images/tools-icon-white.png" alt="Gobuster" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/gobuster.html">Gobuster - Guide and examples</a>
-										<p><i>august 15th 2021</i></p>
+										<a href="content/gobuster.html">Gobuster - Guide and Examples</a>
+										<p><i>Last Updated: march 28th 2024</i></p>
 										<p>Gobuster is a tool used to brute force URLs (directories and files) from websites, DNS subdomains, Virtual Host names and open Amazon S3 buckets. It can be particularly useful during CTF challenges that require you to brute force webserver data, but also during pentest engagements.</p>
 										<span>Tags:</span>
 										<a class="tag">gobuster</a>
@@ -127,7 +127,7 @@
 									</div>
 									<div class="col-sm-10">
 										<a href="content/winxp-sp1-privesc.html">Windows XP SP0/SP1 Privilege Escalation to System</a>
-										<p><i>may 20th 2020</i></p>
+										<p><i>Last Updated: may 20th 2020</i></p>
 										<p>This method of privilege escalation relies on vulnerable Microsoft Services. Most services in newer Windows versions (starting from Windows XP SP2) are no longer vulnerable. Vulnerable in this case, means that we can edit the services' parameters. This particular article focusses on the services SSDPSRV and upnphost.</p>
 										<span>Tags:</span>
 										<a class="tag">windows</a>
@@ -150,7 +150,7 @@
 									</div>
 									<div class="col-sm-10">
 										<a href="content/craft.html">HackTheBox.eu - Craft</a>
-										<p><i>february 25th 2020</i></p>
+										<p><i>Last Updated: february 25th 2020</i></p>
 										<p>The user portion of this box revolves around the Gogs Craft API. We have to exploit an eval() vulnerability and dump a database to get the user flag. In order to gain root we have to exploit an application called Vault.</p>
 										<span>Tags:</span>
 										<a class="tag">htb</a>
@@ -169,7 +169,7 @@
 									</div>
 									<div class="col-sm-10">
 										<a href="content/ssh.html">SSH - Local, Remote and Dynamic port forwarding</a>
-										<p><i>april 08th 2019</i></p>
+										<p><i>Last Updated: april 08th 2019</i></p>
 										<p>In this article we will cover the concept of local, remote and dynamic port forwarding via the Secure Socket Layer (SSH) protocol. This article is still partially under construction.</p>
 										<span>Tags:</span>
 										<a class="tag">ssh</a>
@@ -187,8 +187,8 @@
 										<img src="images/zip.png" alt="FCrackZip" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/fcrackzip-bruteforce-tutorial.html">FCrackZip - ZIP Bruteforce Tutorial</a>
-										<p><i>march 27th 2019</i></p>
+										<a href="content/fcrackzip-bruteforce-tutorial.html">FCrackZip - ZIP Bruteforce Guide and Examples</a>
+										<p><i>Last Updated: september 10th 2024</i></p>
 										<p><i>fcrackzip</i> searches each zipfile given for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
 										<span>Tags:</span>
 										<a class="tag">fcrackzip</a>
@@ -207,7 +207,7 @@
 									</div>
 									<div class="col-sm-10">
 										<a href="content/jerry.html">HackTheBox.eu - Jerry</a>
-										<p><i>january 12th 2019</i></p>
+										<p><i>Last Updated: january 12th 2019</i></p>
 										<p>Jerry was one of the easiest boxes i've done so far. It was very straight forward with no rabbit holes. Unfortunatly there was no priv esc, as the user and root flag were together in the same file.</p>
 										<span>Tags:</span>
 										<a class="tag">htb</a>
@@ -222,18 +222,19 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2 content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
+										<img src="images/tools-icon-white.png" alt="Netcat" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/netcat.html">Netcat</a>
-										<p><i>january 12th 2019</i></p>
+										<a href="content/netcat.html">Netcat - Guide and Examples</a>
+										<p><i>Last Updated: september 10th 2024</i></p>
 										<p>Netcat (often abbreviated to nc) is a computer networking utility for reading from and writing to network connections using TCP or UDP. Netcat is designed to be a dependable back-end that can be used directly or easily driven by other programs and scripts. At the same time, it is a feature-rich network debugging and investigation tool, since it can produce almost any kind of connection its user could need and has a number of built-in capabilities.</p>
 										<span>Tags:</span>
 										<a class="tag">netcat</a>
-										<a class="tag">tutorial</a>
+										<a class="tag">guide</a>
 										<a class="tag">tools</a>
 										<a class="tag">network</a>
 										<a class="tag">foothold</a>
+										<a class="tag">scanning</a>
 									</div>
 								</div>
 								<hr class="solid">
@@ -241,17 +242,17 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2 content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
+										<img src="images/tools-icon-white.png" alt="Nikto" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
 										<a href="content/nikto.html">Nikto - Web Scanner Tutorial</a>
-										<p><i>november 21th 2018</i></p>
+										<p><i>Last Updated: september 10th 2024</i></p>
 										<p>Nikto is an Open Source (GPL) web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
 										<span>Tags:</span>
 										<a class="tag">nikto</a>
 										<a class="tag">web</a>
 										<a class="tag">scanner</a>
-										<a class="tag">tutorial</a>
+										<a class="tag">guide</a>
 										<a class="tag">tools</a>
 										<a class="tag">recon</a>
 										<a class="tag">80</a>
@@ -262,15 +263,15 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2 content-img">
-										<img src="images/tools-icon-white.png" alt="Tool" height="100" width="100">
+										<img src="images/theharvester-logo.png" alt="TheHarvester" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/theharvester.html">TheHarvester - Information Gathering Tutorial</a>
-										<p><i>november 21th 2018</i></p>
-										<p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different pulic sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
+										<a href="content/theharvester.html">TheHarvester - Guide and Examples</a>
+										<p><i>Last Updated: september 10th 2024</i></p>
+										<p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different public sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
 										<span>Tags:</span>
 										<a class="tag">theharvester</a>
-										<a class="tag">tutorial</a>
+										<a class="tag">guide</a>
 										<a class="tag">osint</a>
 										<a class="tag">tools</a>
 										<a class="tag">recon</a>
@@ -285,7 +286,7 @@
 									</div>
 									<div class="col-sm-10">
 										<a href="content/heartbleed.html">Heartbleed vulnerability</a>
-										<p><i>november 21th 2018</i></p>
+										<p><i>Last Updated: november 21th 2018</i></p>
 										<p>Heartbleed is a vulnerability in the OpenSSL implementation - OpenSSL implemented the widely used protocols: SSL (Secure Sockets Layer) and TLS (Transport Layer Security). The flaw in OpenSSL gives an attacker the ability to extract encrypted data from TLS/SSL secured networks.</p>
 										<span>Tags:</span>
 										<a class="tag">heartbleed</a>
