--- a/content/fcrackzip-bruteforce-tutorial.html
+++ b/content/fcrackzip-bruteforce-tutorial.html
@@ -12,7 +12,7 @@
 		</script>
 		<link rel="shortcut icon" href="../favicon/favicon.ico"/>
 		<!-- InstanceBeginEditable name="title" -->
-		<title>How to bruteforce ZIP files with FCrackZip</title>
+		<title>FCrackZip Guide and Examples</title>
 		<!-- InstanceEndEditable -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
 
 		<meta charset="UTF-8">
 		<!-- InstanceBeginEditable name="description" -->
-		<meta name="description" content="fcrackzip searches each zipfile given for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.">
+		<meta name="description" content="A concise guide with examples on how to use FCrackZip to break in to password protected ZIP files.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
 		<meta name="keywords" content="fcrackzip,zip,bruteforce,tutorial,brute,force,how,to,rockyou,ctf,example,examples,dictionary,wordlist,wordlists,use,usage,rockyou.txt">
@@ -68,7 +68,7 @@
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
 					  	<h1>FCrackZip</h1>
-						<center><p><i>How to bruteforce ZIP files</i></p></center>
+						<center><p><i>Guide and Examples</i></p></center>
 					<!-- InstanceEndEditable -->
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
@@ -123,7 +123,7 @@
 							<p>Last updated: 27 march 2019</p>
 							<ol>
 								<li><h5>Description</h5>
-									<p><i>fcrackzip</i> searches each zipfile given for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
+									<p><i>fcrackzip</i> searches each provided zipfile for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
 								</li>
 								<li><h5>Bruteforce the ZIP</h5>
 									<p>The command below will bruteforce <strong>file.zip</strong> with a given wordlist. In this case the wordlist is the well known <strong>rockyou.txt</strong>.</p>
