--- a/content/mitre-attack-active-scanning.html
+++ b/content/mitre-attack-active-scanning.html
@@ -63,7 +63,7 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  	<center><img src="../images/mitre/MITRE_ATTACK_logo.PNG" alt="MITRE ATT&CK Logo" class="image" style="max-height:100%;max-width:50%;padding-top:1%;padding-bottom:0%;"></center><br />
+					  	<center><img src="../images/mitre/MITRE_ATTACK_logo.png" alt="MITRE ATT&CK Logo" class="image" style="max-height:100%;max-width:50%;padding-top:1%;padding-bottom:0%;"></center><br />
 						<h1>Reconnaissance - Active Scanning</h1>
 						<center><p><i>Guide and examples</i></p></center>
 					<!-- InstanceEndEditable -->
